<resources>
    <string name="app_name">Finantrack</string>
    <string name="title_home">Inicio</string>
    <string name="title_transactions">Transacciones</string>
    <string name="title_presupuestos">Presupuestos</string>
    <string name="title_perfil">Perfil</string>
    <string name="dia">Día</string>
    <string name="title_categoria">Categorias</string>
    <string-array name="periodos_presupuesto">
        <item>Mensual</item>
        <item>Semanal</item>
        <item>Anual</item>
    </string-array>
    <string-array name="tipos_array">
        <item>Todos</item>
        <item>Gasto</item>
        <item>Ingreso</item>
    </string-array>


</resources>
