<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_presupuestos"
        android:icon="@drawable/ic_presupuestos"
        android:title="@string/title_presupuestos" />
    <item
        android:id="@+id/navigation_categoria"
        android:icon="@drawable/ic_categoria"
        android:title="@string/title_categoria" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_person"
        android:title="@string/title_perfil" />

</menu>