<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.almadistefano.finantrack.ui.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.almadistefano.finantrack.ui.fragments.transacciones.TransaccionesFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_presupuestos"
        android:name="com.almadistefano.finantrack.ui.fragments.presupuestos.PresupuestosFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_presupuestos" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.almadistefano.finantrack.ui.fragments.perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>